logs/rux.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/houdini.py-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/misaka'...
Listing './lib/python3.5/site-packages/misaka-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/rux'...
Compiling './lib/python3.5/site-packages/rux/daemon.py'...
***   File "./lib/python3.5/site-packages/rux/daemon.py", line 26
    stderr=os.devnull, home_dir='.', umask=022):
                                             ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/rux/generator.py'...
***   File "./lib/python3.5/site-packages/rux/generator.py", line 129
    except ParseException, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rux/pdf.py'...
***   File "./lib/python3.5/site-packages/rux/pdf.py", line 101
    except ParseException, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rux/res'...
Listing './lib/python3.5/site-packages/rux/res/clr'...
Listing './lib/python3.5/site-packages/rux/res/clr/fonts-for-local'...
Listing './lib/python3.5/site-packages/rux/res/clr/sass'...
Listing './lib/python3.5/site-packages/rux/res/clr/static'...
Listing './lib/python3.5/site-packages/rux/res/clr/static/css'...
Listing './lib/python3.5/site-packages/rux/res/clr/static/css/fonts'...
Listing './lib/python3.5/site-packages/rux/res/clr/static/fonts'...
Listing './lib/python3.5/site-packages/rux/res/clr/static/fonts/windows'...
Listing './lib/python3.5/site-packages/rux/res/clr/static/images'...
Listing './lib/python3.5/site-packages/rux/res/clr/templates'...
Listing './lib/python3.5/site-packages/rux/res/src'...
Compiling './lib/python3.5/site-packages/rux/server.py'...
***   File "./lib/python3.5/site-packages/rux/server.py", line 71
    except socket.error, e:  # failed to bind port
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rux-0.6.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/toml.py-0.1.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
